mxslc/tests/data/error/bad_func_call_1.mxsl
float foo(vec3 v)
{
    return v.y;
}

vec3 a = vec3(1.0, 0.5, 0.25);
float b = foo(a, "world");
